--- a/test-tap/src/index.css
+++ b/test-tap/src/index.css
@@ -11,6 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.root{
-  display: flex;
+#root{
+  margin: 1rem;
+}
+
+@media only screen and (min-width : 1024px) {
+  #root{
+    margin: 1rem 25% 0 25%;
+  }
 }
